@@ -1,6 +1,8 @@
 2024-03-24 Konstantin Kushnir <chpock@gmail.com>
 	* Fix pkgconfig for xz feature status
 	* Don't load tcl versions of ::pages and ::fsindex by default
+	* Don't use xz compression when it is inefficient
+	* Add tests for all compression methods
 
 2024-03-23 Konstantin Kushnir <chpock@gmail.com>
 	* Set compression level 9 for xz
